--- a/app/src/main/res/layout/activity_partido.xml
+++ b/app/src/main/res/layout/activity_partido.xml
@@ -7,11 +7,25 @@
     tools:context=".PartidoActivity">
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/partido_guideline_40_h"
+        android:id="@+id/partido_guideline_15_h"
         android:layout_width="1dp"
         android:layout_height="match_parent"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent=".4" />
+        app:layout_constraintGuide_percent=".15" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/partido_guideline_30_h"
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".3" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/partido_guideline_25_v"
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".25" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/partido_guideline_50_v"
@@ -20,22 +34,34 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent=".5" />
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/partido_guideline_75_v"
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent=".75" />
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/partido_marcador"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/partido_guideline_40_h"
+        app:layout_constraintBottom_toBottomOf="@id/partido_guideline_30_h"
         android:background="@drawable/fondo_partido"
         android:gravity="center"
 
-        >
+        />
+
+
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/partido_escudo_local"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:src="@drawable/barcelonalogo"
             android:layout_margin="5dp"
+            app:layout_constraintBottom_toTopOf="@id/partido_nombre_local"
+            app:layout_constraintStart_toStartOf="@id/partido_guideline_25_v"
+            app:layout_constraintEnd_toEndOf="@id/partido_guideline_25_v"
             />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -46,6 +72,9 @@
             android:textColor="@color/cardview_light_background"
             android:padding="10dp"
             android:textSize="20sp"
+            app:layout_constraintEnd_toStartOf="@id/partido_marcador_local"
+            app:layout_constraintTop_toTopOf="@id/partido_guideline_15_h"
+            app:layout_constraintBottom_toBottomOf="@id/partido_guideline_15_h"
             />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -56,16 +85,22 @@
             android:background="@color/cardview_light_background"
             android:padding="5dp"
             android:textSize="30sp"
-            />
+            app:layout_constraintEnd_toStartOf="@id/partido_marcador_vs"
+            app:layout_constraintTop_toTopOf="@id/partido_guideline_15_h"
+            app:layout_constraintBottom_toBottomOf="@id/partido_guideline_15_h"            />
 
         <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/partido_marcador_vs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/activity_partido_vs"
             android:textColor="@color/cardview_light_background"
             android:padding="10dp"
             android:textSize="30sp"
-            />
+            app:layout_constraintStart_toStartOf="@id/partido_guideline_50_v"
+            app:layout_constraintEnd_toEndOf="@id/partido_guideline_50_v"
+            app:layout_constraintTop_toTopOf="@id/partido_guideline_15_h"
+            app:layout_constraintBottom_toBottomOf="@id/partido_guideline_15_h"            />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/partido_marcador_visita"
@@ -75,14 +110,21 @@
             android:background="@color/cardview_light_background"
             android:padding="5dp"
             android:textSize="30sp"
+            app:layout_constraintTop_toTopOf="@id/partido_guideline_15_h"
+            app:layout_constraintBottom_toBottomOf="@id/partido_guideline_15_h"
+            app:layout_constraintStart_toEndOf="@id/partido_marcador_vs"
             />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/partido_escudo_visita"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:src="@drawable/barcelonalogo"
             android:layout_margin="5dp"
+            app:layout_constraintBottom_toTopOf="@id/partido_nombre_visita"
+            app:layout_constraintStart_toStartOf="@id/partido_guideline_75_v"
+            app:layout_constraintEnd_toEndOf="@id/partido_guideline_75_v"
+
             />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -93,17 +135,71 @@
             android:textColor="@color/cardview_light_background"
             android:padding="10dp"
             android:textSize="20sp"
+            app:layout_constraintTop_toTopOf="@id/partido_guideline_15_h"
+            app:layout_constraintBottom_toBottomOf="@id/partido_guideline_15_h"
+            app:layout_constraintStart_toEndOf="@id/partido_marcador_visita"
             />
 
+    <Spinner
+        android:id="@+id/partido_ingresar_evento_tipo_local"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/partido_guideline_30_h"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/partido_guideline_50_v"
+        />
+    <Spinner
+        android:id="@+id/partido_ingresar_evento_jugador_local"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/partido_ingresar_evento_tipo_local"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/partido_guideline_50_v"
 
-    </androidx.appcompat.widget.LinearLayoutCompat>
+        />
+    <Button
+        android:id="@+id/partido_ingresar_evento_aceptar_local"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Añadir"
+        app:layout_constraintTop_toBottomOf="@id/partido_ingresar_evento_jugador_local"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/partido_guideline_50_v"
+        />
+
+    <Spinner
+        android:id="@+id/partido_ingresar_evento_tipo_visita"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/partido_guideline_30_h"
+        app:layout_constraintStart_toStartOf="@id/partido_guideline_50_v"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+    <Spinner
+        android:id="@+id/partido_ingresar_evento_jugador_visita"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/partido_ingresar_evento_tipo_visita"
+        app:layout_constraintStart_toStartOf="@id/partido_guideline_50_v"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+    <Button
+        android:id="@+id/partido_ingresar_evento_aceptar_visita"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Añadir"
+        app:layout_constraintTop_toBottomOf="@id/partido_ingresar_evento_jugador_visita"
+        app:layout_constraintStart_toStartOf="@id/partido_guideline_50_v"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
 
     <View
         android:layout_width="3dp"
         android:layout_height="0dp"
         android:background="@android:color/black"
         app:layout_constraintStart_toStartOf="@id/partido_guideline_50_v"
-        app:layout_constraintTop_toBottomOf="@+id/partido_marcador"
+        app:layout_constraintTop_toBottomOf="@id/partido_guideline_30_h"
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
@@ -112,7 +208,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/partido_marcador"
+        app:layout_constraintTop_toBottomOf="@id/partido_ingresar_evento_aceptar_local"
         android:layout_marginStart="5dp"
         />
 
@@ -123,7 +219,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="@id/partido_guideline_50_v"
-        app:layout_constraintTop_toBottomOf="@id/partido_marcador"
+        app:layout_constraintTop_toBottomOf="@id/partido_ingresar_evento_aceptar_visita"
         android:layout_marginStart="5dp"
         />
 
