--- a/app/src/main/res/layout/item_jornada.xml
+++ b/app/src/main/res/layout/item_jornada.xml
@@ -48,6 +48,7 @@
         android:id="@+id/fragment_calendario_enfrentamiento1_resultado_fecha"
         android:textSize="18sp"
         android:text="@string/item_jornada_defscore"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toRightOf="@id/fragment_calendario_guideline_50"
@@ -92,6 +93,7 @@
         android:id="@+id/fragment_calendario_enfrentamiento2_resultado_fecha"
         android:textSize="18sp"
         android:text="@string/item_jornada_defscore"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toRightOf="@id/fragment_calendario_guideline_50"
@@ -135,6 +137,7 @@
         android:id="@+id/fragment_calendario_enfrentamiento3_resultado_fecha"
         android:textSize="18sp"
         android:text="@string/item_jornada_defscore"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toRightOf="@id/fragment_calendario_guideline_50"
@@ -179,6 +182,7 @@
         android:id="@+id/fragment_calendario_enfrentamiento4_resultado_fecha"
         android:textSize="18sp"
         android:text="@string/item_jornada_defscore"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toRightOf="@id/fragment_calendario_guideline_50"
@@ -223,6 +227,7 @@
         android:id="@+id/fragment_calendario_enfrentamiento5_resultado_fecha"
         android:textSize="18sp"
         android:text="@string/item_jornada_defscore"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toRightOf="@id/fragment_calendario_guideline_50"
@@ -267,6 +272,7 @@
         android:id="@+id/fragment_calendario_enfrentamiento6_resultado_fecha"
         android:textSize="18sp"
         android:text="@string/item_jornada_defscore"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toRightOf="@id/fragment_calendario_guideline_50"
@@ -311,6 +317,7 @@
         android:id="@+id/fragment_calendario_enfrentamiento7_resultado_fecha"
         android:textSize="18sp"
         android:text="@string/item_jornada_defscore"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toRightOf="@id/fragment_calendario_guideline_50"
@@ -355,6 +362,7 @@
         android:id="@+id/fragment_calendario_enfrentamiento8_resultado_fecha"
         android:textSize="18sp"
         android:text="@string/item_jornada_defscore"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toRightOf="@id/fragment_calendario_guideline_50"
