--- a/app/src/main/res/layout/fragment_equipo.xml
+++ b/app/src/main/res/layout/fragment_equipo.xml
@@ -4,11 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/ingresa_jugador_guideline_40_h"
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".4" />
+
     <TextView
         android:id="@+id/fragment_equipo_nombreEquipo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/fragment_equipo_teamname"
         android:textAlignment="center"
         android:textSize="28sp"
         app:layout_constraintTop_toTopOf="parent"
@@ -17,17 +23,18 @@
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/fragment_equipo_logoEquipo"
         android:layout_width="wrap_content"
-        android:layout_height="200dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/fragment_equipo_nombreEquipo"
+        app:layout_constraintBottom_toTopOf="@id/ingresa_jugador_guideline_40_h"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:src="@drawable/barcelonalogo"
         />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fragment_equipo_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/fragment_equipo_logoEquipo"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/ingresa_jugador_guideline_40_h"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
