--- a/app/src/main/res/layout/item_jugador.xml
+++ b/app/src/main/res/layout/item_jugador.xml
@@ -4,14 +4,20 @@
     android:layout_height="match_parent"
     android:layout_margin="20dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/item_jugador_guideline_40_h"
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent=".4" />
     
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/item_jugador_imagen"
         android:layout_width="180dp"
-        android:layout_height="180dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/elsiguientemessi"
+        app:layout_constraintBottom_toTopOf="@id/item_jugador_guideline_40_h"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         />
@@ -23,7 +29,7 @@
         android:layout_height="wrap_content"
         android:textAlignment="center"
         android:text="@string/item_evento_jugador_def"
-        app:layout_constraintTop_toBottomOf="@id/item_jugador_imagen"/>
+        app:layout_constraintTop_toBottomOf="@id/item_jugador_guideline_40_h"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_marginTop="5dp"
