--- a/app/src/main/res/layout/wait_screen.xml
+++ b/app/src/main/res/layout/wait_screen.xml
@@ -10,11 +10,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
-        android:background = "@android:color/holo_blue_bright"
+        android:background = "@color/colorPrimaryDark"
         android:text="Modo espectador"
         android:textSize="20sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:padding="10dp"
         />
 
     <androidx.appcompat.widget.AppCompatImageView
