--- a/app/src/main/res/layout/activity_aprobar_equipo.xml
+++ b/app/src/main/res/layout/activity_aprobar_equipo.xml
@@ -13,6 +13,8 @@
         android:text="Aceptar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/cardview_light_background"
+        android:background="@color/colorPrimaryDark"
         />
     <Button
         android:id="@+id/aprobar_equipo_rechazar"
@@ -21,13 +23,14 @@
         android:text="Rechazar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/cardview_light_background"
+        android:background="@color/colorPrimaryDark"
         />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/aprobar_equipo_nombre_equipo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="nombre equipo"
         app:layout_constraintTop_toBottomOf="@id/aprobar_equipo_aceptar"
         app:layout_constraintStart_toStartOf="parent"
         android:padding="20dp"
@@ -37,7 +40,6 @@
         android:id="@+id/aprobar_equipo_escudo_equipo"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:src="@drawable/barcelonalogo"
         app:layout_constraintTop_toBottomOf="@id/aprobar_equipo_aceptar"
         app:layout_constraintBottom_toBottomOf="@id/aprobar_equipo_nombre_equipo"
         app:layout_constraintStart_toEndOf="@id/aprobar_equipo_nombre_equipo"
@@ -47,7 +49,6 @@
         android:id="@+id/aprobar_equipo_comprobante"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:src="@drawable/barcelonalogo"
         app:layout_constraintTop_toBottomOf="@id/aprobar_equipo_nombre_equipo"
         app:layout_constraintBottom_toBottomOf="parent"
         android:padding="10dp"
