--- a/app/src/main/res/layout/activity_ingresar_jugadores.xml
+++ b/app/src/main/res/layout/activity_ingresar_jugadores.xml
@@ -18,6 +18,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/activity_ing_jug_siguiente"
+        android:textColor="@color/cardview_light_background"
+        android:background="@color/colorPrimaryDark"
         android:layout_gravity="top|end"
 
         />
