--- a/app/src/main/res/layout/item_ingresa_jugador.xml
+++ b/app/src/main/res/layout/item_ingresa_jugador.xml
@@ -89,6 +89,7 @@
         app:layout_constraintStart_toStartOf="@id/ingresa_jugador_guideline_10_v"
         app:layout_constraintEnd_toEndOf="@id/ingresa_jugador_guideline_90_v"
         android:text="@string/item_ingresa_jugador_expediente"
+        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/ingresa_jugador_nombre"
         android:visibility="gone"
         />
@@ -100,7 +101,7 @@
         app:layout_constraintStart_toStartOf="@id/ingresa_jugador_guideline_10_v"
         app:layout_constraintEnd_toEndOf="@id/ingresa_jugador_guideline_90_v"
         app:layout_constraintTop_toBottomOf="@id/ingresa_jugador_etiqueta_expediente"
-        android:hint="ingresa expediente"
+        android:hint="Ingresa expediente"
         android:visibility="gone"
         />
     <androidx.appcompat.widget.AppCompatTextView
@@ -108,6 +109,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Correo:"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@id/ingresa_jugador_guideline_10_v"
         app:layout_constraintEnd_toEndOf="@id/ingresa_jugador_guideline_90_v"
         app:layout_constraintTop_toBottomOf="@id/ingresa_jugador_expediente"
@@ -120,7 +122,7 @@
         app:layout_constraintStart_toStartOf="@id/ingresa_jugador_guideline_10_v"
         app:layout_constraintEnd_toEndOf="@id/ingresa_jugador_guideline_90_v"
         app:layout_constraintTop_toBottomOf="@id/ingresa_jugador_etiqueta_correo"
-        android:hint="ingresa correo electronico"
+        android:hint="Ingresa correo electronico"
         android:visibility="gone"
         />
     <androidx.appcompat.widget.AppCompatTextView
@@ -131,6 +133,7 @@
         app:layout_constraintEnd_toEndOf="@id/ingresa_jugador_guideline_70_v"
         app:layout_constraintTop_toBottomOf="@id/ingresa_jugador_correo"
         android:text="Carrera:"
+        android:textStyle="bold"
         android:visibility="gone"
         />
 
@@ -141,7 +144,7 @@
         app:layout_constraintStart_toStartOf="@id/ingresa_jugador_guideline_10_v"
         app:layout_constraintEnd_toEndOf="@id/ingresa_jugador_guideline_70_v"
         app:layout_constraintTop_toBottomOf="@id/ingresa_jugador_etiqueta_carrera"
-        android:hint="ingresa carrera"
+        android:hint="Ingresa carrera"
         android:visibility="gone"
         />
 
